# visgate-python

./: .cursorrules  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: API.md
examples/: 00_auth_identity.py  00_smoke_sdk.py  01_live_api_smoke.py  01_models_catalog.py  02_generate_unified.py  03_images_all_providers.py  04_videos_all_providers.py  05_usage_history_verify.py  06_provider_balances.py  07_cache_demo.py  08_semantic_cache_demo.py  09_provider_keys.py  10_api_keys.py  11_billing_readonly.py  12_veo_from_catalog.py  13_async_generation.py  14_live_regression_smoke.py  README.md  run_all_capabilities.py  run_with_env.py  run_with_sifreler.py
examples/sample_outputs/: out_00_auth_identity.txt  out_00_smoke_sdk.txt  out_01_live_api_smoke.txt  out_01_models_catalog.txt  out_02_generate_unified.txt  out_03_images_all_providers.txt  out_04_videos_all_providers.txt  out_05_usage_history_verify.txt  out_06_provider_balances.txt  out_07_cache_demo.txt  out_08_semantic_cache_demo.txt  out_09_provider_keys.txt  out_10_api_keys.txt  out_11_billing_readonly.txt  out_12_veo_from_catalog.txt  out_13_async_generation.txt  out_14_live_regression_smoke.txt
src/visgate_sdk/: __init__.py  _utils.py  client.py  exceptions.py
src/visgate_sdk/resources/: __init__.py  generate.py  images.py  models.py  providers.py  requests.py  usage.py  videos.py
tests/: __init__.py  test_client.py
